Bug 401947 - Empty Trash menu option no longer appears when right clicking a .desktop file
Summary: Empty Trash menu option no longer appears when right clicking a .desktop file
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: 5.14.4
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords: junior-jobs, usability
Depends on:
Blocks:
 
Reported: 2018-12-10 10:12 UTC by Kristopher Ives
Modified: 2018-12-14 22:38 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.54
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kristopher Ives 2018-12-10 10:12:17 UTC
SUMMARY
When I open the context menu for a .desktop file that has URL=trash:/ I no longer see the option to "Empty Trash". I do see other options, including the option to "Move to Trash" which does not empty the trash (Image: https://i.imgur.com/nN2bB1u.png)

This was working until a recent update to KDE Neon git-unstable. I tested in a VM and it appears that git-stable and earlier don't have this problem currently.

STEPS TO REPRODUCE
1. Install KDE Neon git-unstable
2. Change your Desktop to Folder View
3. Drag from Dolphin the Trash to the desktop (creating a .desktop file with "URL=trash:/")
4. Right click the trash on the desktop

OBSERVED RESULT
No "Empty Trash" option will be visible.

EXPECTED RESULT
There should be a "Empty Trash" option.

SOFTWARE/OS VERSIONS
kio: 5.52.0+p18.04+gi
KDE Plasma Version: 5.14.4
KDE Frameworks Version: 5.54.0
Qt Version: 5.11.2

ADDITIONAL INFORMATION
This was started as a Reddit thread: https://www.reddit.com/r/kde/comments/a3zgse/is_anyone_else_having_a_problem_where_the_trash/

If this is the wrong place to submit problems with git-unstable I understand and please be kind enough to point me in the right direction.

Thank you for all your hard work on KDE.
Comment 1 Kristopher Ives 2018-12-11 17:59:38 UTC
Do you know a way I can compare all the changes that have happened for KDE Neon git-stable to git-unstable?
Comment 2 David Edmundson 2018-12-13 00:12:40 UTC
>Do you know a way I can compare all the changes that have happened for KDE Neon git-stable to git-unstable?

From

https://anongit.kde.org/plasma-desktop


git log HEAD...origin/Plasma/5.14
Comment 3 Kai Uwe Broulik 2018-12-13 07:43:31 UTC
Confirmed, bug in KFileItem::isDesktopFile()
Comment 4 Kai Uwe Broulik 2018-12-13 08:59:15 UTC
Git commit 86e3142f85886d19f1744bee7aec9056d4e1a780 by Kai Uwe Broulik.
Committed on 13/12/2018 at 08:58.
Pushed by broulik into branch 'master'.

[KFileItem] Fix isLocal check in checkDesktopFile

This was accidentally removed in 16edef0dca46f4292bf83d22874a02d8e6fe15e7 and then
cleaned up improperly in c08ee4577168070896a4a46220cd39df4e4e32cf

Differential Revision: https://phabricator.kde.org/D17554

M  +3    -1    src/core/kfileitem.cpp

https://commits.kde.org/kio/86e3142f85886d19f1744bee7aec9056d4e1a780
Comment 5 Kristopher Ives 2018-12-14 22:38:18 UTC
Thanks for the quick help guys. I notice this also seemed to fix a bug related to drag/drop uploads for sites like Imgur and GMail since I can't reproduce it.