[KFileItem] Fix isLocal check in checkDesktopFile

This was accidentally removed in 16edef0dca46f4292bf83d22874a02d8e6fe15e7 and then
cleaned up improperly in c08ee4577168070896a4a46220cd39df4e4e32cf

BUG: 401947

Differential Revision: https://phabricator.kde.org/D17554